ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
spec:
  backend:
    serviceName: hello-kubernetes
    servicePort: 8080
